# nova-bank-card-portfolio-analysis

./: README.md  main.py  pyproject.toml
src/: config.py  main.py
src/generators/: cards.py  customers.py  snapshots.py  transactions.py
